# FlashSpec

./: .gitignore  README.md  pyproject.toml  run.ipynb
benchmarks/: ab_split_k.sh  e2e_serving.py  microbench.py  sweep.py
doc/: README.MD  TODO.MD  optimization-log.md  split-k-plan.md
examples/: basic_usage.py  walkthrough.py
results/: dense_s2048_d128.json  portable_fused_s2048_d128.json  portable_paged_s2048_d128.json  profile_matrix_report.md  sweep.csv  sweep_smoke.csv  triton_fused_s2048_d128.json  triton_fused_s2048_d128_compare.json  triton_fused_s2048_d128_profile.md  triton_fused_s2048_d64.json  triton_fused_s4096_d128.json  triton_fused_s4096_d64.json  triton_fused_s512_d128.json  triton_fused_s512_d64.json  triton_paged_s2048_d128.json  triton_paged_s2048_d128_compare.json  triton_paged_s2048_d128_profile.md  triton_paged_s2048_d64.json  triton_paged_s4096_d128.json  triton_paged_s4096_d64.json  triton_paged_s512_d128.json  triton_paged_s512_d64.json
results/analysis/: summary.csv
results/colab_kernel1/: dense_s2048_d128.json  triton_fused_s2048_d128.json  triton_fused_s2048_d128_compare.json  triton_fused_s2048_d64.json  triton_fused_s4096_d64.json  triton_fused_s512_d128.json
results/colab_kernels/: ab_s2048_splitoff.json  ab_s2048_spliton.json  ab_s4096_splitoff.json  ab_s4096_spliton.json  bn_s2048_bn32.json  bn_s2048_bn64.json  (+21 more)
scripts/: analyze_matrix.py  analyze_results.py  backfill_ncu.py  cli_common.py  export_ncu_source_reports.py  ncu_parse.py  profile_matrix.py  profile_report.py  profile_roofline.py
tests/: test_flashspec.py
(+166 files in other folders)
