[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flashspec"
version = "0.1.0"
description = "Paged quantized KV decode attention kernels and benchmarks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
]

[project.optional-dependencies]
triton = ["triton>=2.1"]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

